# windows_term_events-rs

./: Cargo.toml  rustfmt.toml
.github/: dependabot.yml
examples/: print_events.rs
src/: lib.rs
